--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -3,6 +3,9 @@
 </h2>
 
 <div class="right">
+    {{ productsNumber$ | async }} products loaded /
+    {{ productsTotalNumber$ | async }} total -
+
     {favourites, plural,
     =0 {no favourite}
     =1 {1 favourite}
@@ -30,6 +33,11 @@
 </ul>
 
 <div class="right">
+    <span *ngIf="mostExpensiveProduct$ | async as mostExpensiveProduct">
+        Most expensive:
+        {{ mostExpensiveProduct?.name }}
+        {{ mostExpensiveProduct?.price | currency: "CAD":"symbol-narrow":".2" }}
+    </span>
     <button (click)="reset()">Reset List</button>&nbsp;
     <a routerLink="insert">Add new product...</a>
 </div>
@@ -40,7 +48,11 @@
         < Previous Page
     </button>
     Page {{ currentPage }}
-    <button (click)="nextPage()">
+    <button (click)="nextPage()"
+            [disabled]="(productsNumber$ | async) <= end">
         Next Page >
+    </button>
+    <button (click)="loadMore()" *ngIf="(productsNumber$ | async) <= end && (hasMoreProducts$ | async)">
+        Load {{ productsToLoad }} more...
     </button>
 </div>
